# football_insight

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md
football_insight_service_backend_rs/: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  deploy_jd_docker.sh
football_insight_service_backend_rs/deploy/: football-insight.service
football_insight_service_backend_rs/migrations/: 20260405073000_init_football_insight.sql  20260405081500_add_team_and_player_profiles.sql  20260405163000_add_snapshot_kinds.sql  20260405170000_drop_legacy_standings_unique.sql  20260405193000_add_auth_tables.sql  20260405201000_switch_to_invite_auth.sql  20260405210000_add_wechat_followers.sql  20260406021000_add_system_configs.sql  20260406090000_add_team_insights.sql  20260406094000_add_team_insight_assists.sql  20260406102000_rename_phone_number_to_account_identifier.sql  20260407113000_add_team_board_tables.sql  20260409001000_add_membership_tier_to_users.sql  20260409113000_seed_ai_chat_system_configs.sql  20260409170000_seed_ai_chat_web_search_system_configs.sql  20260410110000_add_pre_match_support_tables.sql  20260410235500_seed_wechat_invite_reply_template.sql  20260411103000_add_user_referrals.sql  20260411162000_seed_membership_tier_rules.sql  20260411193000_add_official_wechat_binding_to_users.sql  20260412001000_update_membership_tier_rules_thresholds.sql  20260421133426_update_wechat_invite_reply_template.sql  20260421163000_add_match_corner_fields.sql  20260421190000_add_match_technical_stats.sql  20260422100000_add_v2_membership_tier.sql  20260422150000_add_payment_orders.sql  20260423095000_update_membership_product_price_to_49.sql  20260424173000_update_membership_products_v6_to_v9.sql  20260424190000_add_membership_expiration.sql  20260424200000_add_mini_program_review_configs.sql  20260425103000_add_user_activity_snapshots.sql
sina_csl_scraper/: .env.sync.example  .gitignore  AGENTS.md  README.md  auto_sync_latest.sh  pyproject.toml  sync_avatars_daily.sh  sync_latest.sh
(+301 files in other folders)
