[package]
name = "football_insight_service_backend_rs"
version = "0.1.0"
edition = "2024"
default-run = "football_insight_service_backend_rs"

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
aes = "0.8"
base64 = "0.22"
cbc = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
jsonwebtoken = "9"
md5 = "0.7"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
redis = { version = "0.29", features = ["tokio-comp"] }
rig-core = "0.34.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
time = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
serial_test = "3"
tower = { version = "0.5", features = ["util"] }
